
==== Breaking

==== Added
* `Fingerprint::Add` and `Fingerprint::Decode` transforms. In https://github.com/lyrasis/kiba-extend/pull/65[PR#65]
* `override_app_delim_check` param to `Fingerprint::Add` for backward compatibility with a project I want to be able to use this transform. Defaults to `false`. https://github.com/lyrasis/kiba-extend/pull/66[PR#66]

==== Changed
* Moves `Merge::CompareFieldsFlag` to `Compare::FieldValues`. Aliases the old transform to the new one for backward compatibility, but raises deprecation warning. In https://github.com/lyrasis/kiba-extend/pull/62[PR#62]
* `Fingerprint::Decode` forces field values to UTF-8, preventing CSV write errors. In https://github.com/lyrasis/kiba-extend/pull/66[PR#66]

==== Deleted

==== To be deprecated/Will break in a future version

== Releases
=== 2.7.1 - 2022-03-10
https://github.com/lyrasis/kiba-extend/compare/v2.6.1\...v2.7.1[Compare code changes]

==== Added
* `Kiba::Extend::Utils::MultiSourceNormalizer` and `Kiba::Extend::Jobs::MultiSourcePrepJob` to handle normalization of fields across multiple sources to be used in a multiple-source job with a `Kiba::Extend::Destinations::CSV` destination (in https://github.com/lyrasis/kiba-extend/pull/60[PR#60])
* `explicit_no` argument to `Kiba::Extend::Transforms::Deduplicate::Flag`. Defaults to `true` for backward compatibility (in https://github.com/lyrasis/kiba-extend/pull/60[PR#60])
* `amazing_print` dependency  (in https://github.com/lyrasis/kiba-extend/pull/61[PR#61])

=== 2.6.1 - 2022-03-09
https://github.com/lyrasis/kiba-extend/compare/v2.6.0\...v2.6.1[Compare code changes]

==== Breaking
* `mvdelim` keyword argument removed from `Prepend::ToFieldValue`, and replaced by `multival` and `delim`

==== Added
* Binstub for running rspec without `bundler exec` (given that you add `kiba-extend/bin` to your PATH) (in https://github.com/lyrasis/kiba-extend/pull/59[PR#59])